syntax = "proto3";

package helloworld;

service LangService {
  rpc List (ListReq) returns (ListResp);
  rpc GetLang (GetLangReq) returns (Lang);
}

message ListReq {
	int32 offset = 1;
	int32 limit = 2;
}

message Lang {
	string name = 1;
	int64 birthday = 2;
	repeated Version versions = 3;
}

message Version {
	int32 id = 1;
	string version = 2;
	string desc = 3;
}

message ListResp {
  repeated Lang langs = 1;
  int32 totalCount = 2;
}

message GetLangReq {
	string name = 1;
}
